# zero-to-ai

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .replit  .replitignore  CAREER_ROADMAP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON_MATRICES.md  CONTRIBUTING.md  INTERVIEW_PREP.md  LEARNING_PATH.md  LICENSE  LICENSE.md  MASTER_STUDY_GUIDE.md  README.md  REFERENCES.md  SECURITY.md  SETUP.md  SUPPORT.md  checklist.md  colab_requirements.txt  convert_to_notebooks.py  convert_to_notebooks.txt  environment.yml  install_dependencies.sh  kaggle_requirements.txt  progress_tracker.json  pyproject.toml  replit.nix  requirements-aws.txt  requirements-dev.txt  requirements-replit.txt  requirements.txt  setup.md  token.py
.devcontainer/: README.md  devcontainer.json
.github/: LESSON_TEMPLATE.md  QUICK_IMPLEMENTATION_GUIDE.md  SAMPLE_ENHANCED_LESSON.md  pull_request_template.md
0-glossary/: GLOSSARY.md  LEARNING_PATH.md
0-python/: README.md
00-course-setup/: 2026_model_landscape.md  README.md  ai_dev_tools_2026.md  troubleshooting.md
01-python/: README.md
02-data-science/: DS.md  README.md
03-maths/: README.md
04-token/: 00_START_HERE.ipynb  01_tokenizers_quickstart.ipynb  04_production_guide.md  06_integration_guide.md  README.md  README_TIKTOKEN.md  huggingface_tokenizers_guide.md  intro.md  token_exploration.ipynb  token_exploration_output.txt
05-embeddings/: 00_START_HERE.ipynb  QUICKSTART.md  WHATS_NEW.md  embeddings_intro.ipynb  embeddings_intro_output.txt  huggingface_embeddings.ipynb  paraphrase_mining_intro.ipynb  sentence_transformer_intro.ipynb
06-neural-networks/: 00_START_HERE.ipynb  01_neural_network_basics.ipynb  04_attention_mechanism.ipynb  challenges.md  intro.md  transformer_architecture.md
07-vector-databases/: README.md
08-rag/: 01_basic_rag.ipynb  02_document_processing.ipynb  04_llamaindex_rag.ipynb  06_conversation_rag.ipynb  07_evaluation.ipynb  09_advanced_retrieval.ipynb  10_graphrag_visual_rag.ipynb  README.md  create_rag_notebooks.py
09-mlops/: 02_fastapi_basics.ipynb  05_monitoring.ipynb  06_ci_cd_pipeline.ipynb  07_cloud_deployment.ipynb  09_llm_infrastructure.ipynb  README.md  create_mlops_notebooks.py
1-data-science/: README.md
1-python/: README.md
1-token/: 01_tokenizers_quickstart.ipynb  01_tokenizers_quickstart.py  02_tokenizers_training.ipynb  02_tokenizers_training.py  03_advanced_training_methods.ipynb  03_advanced_training_methods.py  05_tokenizer_comparison.md  README.md  intro.md  sentencepiece_example.ipynb  sentencepiece_example.py  tiktoken_example.ipynb  tiktoken_example.py  tiktoken_example_output.txt  token_exercises.py  token_exploration.py
10-prompt-engineering/: 01_basic_prompting.ipynb  03_react_prompting.ipynb
10-specializations/: 00_START_HERE.ipynb
11-llm-finetuning/: 03_lora_basics.ipynb
11-prompt-engineering/: 00_START_HERE.ipynb  01_basic_prompting.ipynb  02_chain_of_thought.ipynb  05_structured_outputs_dspy.ipynb  06_long_context_strategies.ipynb  README.md  assignment.md
12-llm-finetuning/: 00_START_HERE.ipynb  01_dataset_preparation.ipynb  02_supervised_finetuning.ipynb  04_qlora_efficient.ipynb  05_dpo_alignment.ipynb  06_evaluation.ipynb  07_deployment.ipynb  08_grpo_reasoning_training.ipynb  09_unsloth_fast_finetuning.ipynb  10_quantization_gptq_awq.ipynb  11_rlhf_constitutional_ai.ipynb  README.md
12-multimodal/: README.md
(+856 files in other folders)
